# socializer

./: .gitignore  .gitmodules  CMakeLists.txt  build-ci.sh  socializer.pri  socializer.pro
cmake/modules/: EnableCoverageReport.cmake  EnableSlocCount.cmake
examples/: CMakeLists.txt
examples/facebook-login/: CMakeLists.txt  main.cpp
examples/foursquare-login/: CMakeLists.txt  main.cpp
examples/linkedin-login/: CMakeLists.txt  main.cpp
include/: Facebook  FacebookUser  Foursquare  FoursquareUser  LinkedIn  LinkedInUser  Twitter
qmlcomponents/: FacebookQML.qml  FoursquareQML.qml  LinkedinQML.qml  TwitterQML.qml
qmlcomponents/symbian/: FacebookQML.qml
src/: CMakeLists.txt  facebook.cpp  facebook.h  facebookuser.cpp  facebookuser.h  foursquare.cpp  foursquare.h  foursquareuser.cpp  foursquareuser.h  linkedin.cpp  linkedin.h  linkedinuser.cpp  linkedinuser.h  oauth.cpp  oauth.h  src.pro  twitter.cpp  twitter.h  user.cpp  user.h
src/facebook/: facebook.cpp  facebook.h  facebookuser.cpp  facebookuser.h
src/foursquare/: foursquare.cpp  foursquare.h
src/linkedin/: linkedin.cpp  linkedin.h  linkedinuser.cpp  linkedinuser.h
src/qjson/src/: CMakeLists.txt
src/twitter/: twitter.cpp  twitter.h
testApp/: CMakeLists.txt  main.cpp  testApp.pro
tests/: CMakeLists.txt  README  facebooktest.cpp  facebooktest.h  facebookusertest.cpp  facebookusertest.h  linkedinusertest.cpp  linkedinusertest.h
